--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is a Header. Yarr!</h1>
     <p>This is a paragrah, Yarr!</p>
+    <p>This is another paragraph, Yarr!</p>
 </body>
 </html>
